--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -139,7 +139,7 @@
                             <li><a href="~/rent/commerce">Снять коммерцию</a></li>
                         </ol>
                     </li>
-                    <li><a href="~/newbuilding/">ЖК Новострои</a></li>
+                    <li><a href="~/newbuilding/">Новострои</a></li>
                     <li><a href="~/manager/" id="">Менеджеры</a></li>
                     <li>
                         <a href="#" id="">О нас</a>
