--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -7,10 +7,10 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("ЖК Новострои", "index", "newbuilding")
+        @Html.ActionLink("Новострои", "index", "newbuilding")
     </div>
 </div>
-<div class="h2novostroy"><h2>Новостройки</h2></div>
+<div class="h2novostroy"><h2>Новострои</h2></div>
 <div class="selection">
     <div class="region">
         <select id="district">
