--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/FeedBacks/List.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/FeedBacks/List.cshtml
@@ -27,7 +27,7 @@
                 <li><a href="~/cabinet/rent/commerce">Коммерция</a></li>
             </ol>
         </li>
-        <li><a class="3" href="~/cabinet/newbuilding/list">ЖК Новострои</a></li>
+        <li><a class="3" href="~/cabinet/newbuilding/list">Новострои</a></li>
         <li><a class="3" href="~/cabinet/news/list">Новости</a></li>
         <li><a class="preActive active" href="~/cabinet/feedbacks/list">Отзывы</a></li>
         <li><a class="4" href="~/cabinet/vacancies/list">Вакансии</a></li>
