--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
@@ -276,7 +276,7 @@
                 <li><a href="~/cabinet/rent/commerce">Коммерция</a></li>
             </ol>
         </li>
-        <li><a class="3" href="~/cabinet/newbuilding/list">ЖК Новострои</a></li>
+        <li><a class="3" href="~/cabinet/newbuilding/list">Новострои</a></li>
         <li><a class="4" href="~/cabinet/news/list">Новости</a></li>
         <li><a class="4" href="~/cabinet/feedbacks/list">Отзывы</a></li>
         <li><a class="4" href="~/cabinet/vacancies/list">Вакансии</a></li>
@@ -290,7 +290,9 @@
     <form enctype="multipart/form-data" action="" method="POST">
         @Html.AntiForgeryToken()
         @Html.HiddenFor(m => m.Id)
-        @Html.ValidationSummary()
+        <div class="error_status">
+            @Html.ValidationSummary()
+        </div>
         <div class="contact_info">
             <table>
                 @if (Session != null && Session["user"] is SessionModel)
@@ -389,7 +391,7 @@
                     }
                 }
             </table>
-            <h3>Общие фотографии(не более 3-х)</h3>
+            <h3>Общие фотографии(не более 2-х)</h3>
             @if (Model.Images != null && Model.Images.Count > 0)
             {
                 <div class="add_photo">
