--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -93,13 +93,14 @@
 {
     int i = 0;
     int j = 0;
+    int max = !String.IsNullOrEmpty(Model.Advert.YouTubeUrl) ? 2 : 3;
     <span class="noprint">
         <div id="products_example">
             <div id="products">
                 <div class="slides_container">
                     @foreach (var item in Model.Advert.Images)
                 {
-                    if (i >= 2)
+                    if (i >= max)
                     {
                         break;
                     }
@@ -115,7 +116,7 @@
 
                     @foreach (var item in Model.Advert.Images)
                 {
-                    if (j >= 2)
+                    if (j >= max)
                     {
                         break;
                     }
