--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -348,6 +348,7 @@ body {
     -webkit-box-shadow: inset 0 0 9px rgba(255, 255, 255, 0.35);
     box-shadow: inset 0 0 9px rgba(255, 255, 255, 0.35);
     margin-bottom: 9px;
+    z-index: 10004;
 }
 
 .header #fav {
@@ -1435,7 +1436,7 @@ body {
     text-transform: uppercase;
     margin-left: 225px;
     margin-top: 59px;
-    width: 700px;
+    width: 770px;
 }
 
 .h2prodsale h2 {
@@ -1957,16 +1958,16 @@ body {
     position: relative;
 }
 
-    .h2novostroy .favorite {
-        position: absolute;
-        top: 60px;
-        right: 219px;
-    }
-
     .h2novostroy .favorite1 {
         position: absolute;
         top: 113px;
-        right: 219px;
+        left: 1015px;
+    }
+
+    .h2novostroy .favorite {
+        position: absolute;
+        top: 60px;
+        left: 1015px;
     }
 
     .h2novostroy #favorite {
@@ -2613,25 +2614,26 @@ body {
 }
 
 .error_status {
- 	color: red;
- 	font-family: Arial;
- 	font-size: 18px;
- }
-
-.print { 
-width: 22px; 
-height: 22px; 
-position: absolute; 
-left: 140px; 
-}
-.print1 { 
-width: 22px; 
-height: 22px; 
-position: absolute; 
-left: 345px; 
-top: 370px; 
+    color: red;
+    font-family: Arial;
+    font-size: 18px;
 }
 
-.seotext3 { 
-position: relative; 
+.print {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    left: 140px;
+}
+
+.print1 {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    left: 345px;
+    top: 370px;
+}
+
+.seotext3 {
+    position: relative;
 }
